# HalconMilenarioBT

.cache/: event-sound-cache.tdb.64f119b835a34fb3840f1a3c4e619c47.i686-pc-linux-gnu  zeitgeist-vacuum.stamp
.cache/compizconfig-1/: animation.pb  commands.pb  compiztoolbox.pb  composite.pb  copytex.pb  core.pb  decor.pb  expo.pb  ezoom.pb  fade.pb  gnomecompat.pb  grid.pb  imgpng.pb  matecompat.pb  mousepoll.pb  move.pb  opengl.pb  place.pb  regex.pb  resize.pb  scale.pb  session.pb  snap.pb  staticswitcher.pb  switcher.pb  unitymtgrabhandles.pb  unityshell.pb  vpswitch.pb  wall.pb  workarounds.pb
.cache/fontconfig/: e13b20fdb08344e0e664864cc2ede53d-le32d4.cache-6
.cache/ibus/bus/: registry
.cache/logrotate/: status
.cache/mozilla/firefox/tgfw9pgj.default/cache2/: index
.cache/mozilla/firefox/tgfw9pgj.default/cache2/entries/: 0001B25163403BEA5151E89B9092DE1879014F5D  (+5369 more)
.cache/mozilla/firefox/tgfw9pgj.default/safebrowsing/: goog-badbinurl-shavar.pset  goog-badbinurl-shavar.sbstore  goog-malware-shavar.pset  goog-malware-shavar.sbstore  goog-phish-shavar.pset  goog-phish-shavar.sbstore  goog-unwanted-shavar.pset  goog-unwanted-shavar.sbstore
.cache/mozilla/firefox/tgfw9pgj.default/startupCache/: startupCache.4.little  webext.sc.lz4
.cache/wallpaper/: 0_5_1920_975_bb2ecf270ff8e82afbcb5d6096ed566c
CLionProjects/HalconMilenario/: CMakeLists.txt  main.cpp
CLionProjects/HalconMilenario/Structure/: MainWindow.cpp  MainWindow.h
CLionProjects/HalconMilenario/data/: LinkedListMapa.cpp  LinkedListMapa.h  NodeMapa.cpp  NodeMapa.h
(+8 files in other folders)
